Update the project configuration
Added styles in "Styles" folder
Update angular json file - prod, styles

--- a/angular.json
+++ b/angular.json
@@ -73,7 +73,7 @@
               "browserTarget": "tech-test:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "production"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
