--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "ng serve --port 4300",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "ng lint --type-check --format verbose",
     "e2e": "ng e2e",
+    "prepare": "husky install",
     "server": "json-server --watch ./server/database.json"
   },
   "private": true,
@@ -36,6 +37,7 @@
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "~16.11.1",
     "codelyzer": "^6.0.2",
+    "husky": "^6.0.0",
     "jasmine-core": "~3.10.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.4",
@@ -44,6 +46,8 @@
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "karma-mocha-reporter": "^2.2.5",
+    "prettier": "^2.1.2",
+    "pretty-quick": "^3.1.0",
     "protractor": "~7.0.0",
     "ts-node": "^10.2.1",
     "tslint": "~5.20.1",
